# pico-apps

./: .gitignore
blink-c/: CMakeLists.txt
blink-c-rtos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
freertos-lib/: CMakeLists.txt  freertos_helper.c
minimal-blink/: CMakeLists.txt  blink.c
minimal-blink-c-with-rust/: CMakeLists.txt  blink.c
minimal-blink-c-with-rust/rust-lib/: Cargo.toml  rust-lib.h
minimal-blink-c-with-rust/rust-lib/src/: lib.rs
minimal-blink-python/: blink.py
minimal-blink-rust-bare/: Cargo.toml  HowToBuild-elf2uf2-rs.txt  memory.x
minimal-blink-rust-bare/.cargo/: config
minimal-blink-rust-bare/src/: blink.rs  main.rs
minimal-blink-rust-hal/: Cargo.toml
minimal-blink-rust-hal-interrupt/: Cargo.toml
minimal-blink-rust-hal-interrupt/src/: main.rs
minimal-blink-rust-hal-rtos/: Cargo.toml  build.rs
minimal-blink-rust-hal-rtos/freertos/: CMakeLists.txt  arm_toolchain.cmake
minimal-blink-rust-hal-rtos/src/: freertos.rs  main.rs
minimal-blink-rust-hal-rtos/src/freertos/: mod.rs  native.rs  opaque_box.rs
minimal-blink-rust-hal/src/: main.rs
minimal-blink-rust-pac/: Cargo.toml
minimal-blink-rust-pac/src/: blink.rs  main.rs
minimal-blink-with-lib/lib/: CMakeLists.txt  app.c  app.h  hw.c
minimal-blink-with-lib/main/: CMakeLists.txt  app.c  blink.c  main.c
minimal-blink-with-rust-lib/lib/: app.h  app.rs  build.sh
minimal-blink-with-rust-lib/main/: CMakeLists.txt  app.c  hw.h  main.c
pico-clock-hello/: Cargo.toml  readme.txt
pico-clock-hello/freertos/: FreeRTOSConfig.h
pico-clock-hello/src/: dot_matrix.rs  main.rs
pico-clock-hello/src/cli/: arguments.rs  line_input.rs  mod.rs
pico-clock-hello/src/display/: data.rs  mod.rs  pins.rs
pico-clock-hello/src/text/: font.rs  mod.rs
uart-cli/: Cargo.toml
uart-cli/src/: main.rs
uart-cli/src/cli/: line_input.rs  mod.rs
usb-serial-cli/: Cargo.toml
