[package]
name = "minimal-blink-rust-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2"
panic-halt = "0.2"
embedded-hal = "0.2"
embedded-time = "0.12"
pico = { git = "https://github.com/rp-rs/rp-hal.git" }
nb = "1.0"
